--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -16,13 +16,47 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>2.2.4</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <injectAllReactorProjects>true</injectAllReactorProjects>
+          <dateFormat>yyyy-MM-dd HH:mm:ss z</dateFormat>
+          <verbose>true</verbose>
+          <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+          <generateGitPropertiesFile>false</generateGitPropertiesFile>
+          <failOnNoGitDirectory>false</failOnNoGitDirectory>
+          <skip>false</skip>
+          <excludeProperties>
+            <excludeProperty>git.remote.*</excludeProperty>
+          </excludeProperties>
+          <abbrevLength>8</abbrevLength>
+          <gitDescribe>
+            <skip>false</skip>
+            <always>false</always>
+            <abbrev>8</abbrev>
+            <dirty>-dirty</dirty>
+            <forceLongFormat>false</forceLongFormat>
+          </gitDescribe>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>@project.groupId@</groupId>
         <artifactId>@project.artifactId@</artifactId>
         <version>@project.version@</version>
         <executions>
           <execution>
             <id>send</id>
-            <phase>validate</phase>
+            <phase>compile</phase>
             <goals>
               <goal>send</goal>
             </goals>
