--- a/src/test/resources/project-to-test/pom.xml
+++ b/src/test/resources/project-to-test/pom.xml
@@ -13,6 +13,40 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>2.2.4</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <injectAllReactorProjects>true</injectAllReactorProjects>
+          <dateFormat>yyyy-MM-dd HH:mm:ss z</dateFormat>
+          <verbose>true</verbose>
+          <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+          <generateGitPropertiesFile>false</generateGitPropertiesFile>
+          <failOnNoGitDirectory>false</failOnNoGitDirectory>
+          <skip>false</skip>
+          <excludeProperties>
+            <excludeProperty>git.remote.*</excludeProperty>
+          </excludeProperties>
+          <abbrevLength>8</abbrevLength>
+          <gitDescribe>
+            <skip>false</skip>
+            <always>false</always>
+            <abbrev>8</abbrev>
+            <dirty>-dirty</dirty>
+            <forceLongFormat>false</forceLongFormat>
+          </gitDescribe>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>net.alterasoft.maven</groupId>
         <artifactId>maven-xmpp-plugin</artifactId>
         <version>1.0-SNAPSHOT</version>
@@ -22,7 +56,9 @@
             port=5222
             domain=alterasoft.net
             userName=gitlab
-            recipients=roytmana@alterasoft.net;solovyevk@alterasoft.net;roytmana@gmail.com;solovyevk@gmail.com;alex.guk@gmail.com
+            recipients=roytmana@alterasoft.net;roytmana@gmail.com
+            message=${project.groupId}::${project.artifactId}-${project.version} ${project.build.finalName} has been deployed\nCommit
+            ${git.commit.id.abbrev} by ${git.build.user.email}: "${git.commit.message.short}"
           </configText>
           <configFile>C:\projects\peacetech\maven-xmpp-plugin\src\test\xmpp-plugin-config.properties</configFile>
           <!--
@@ -35,13 +71,13 @@
                       <recipient>roytmana@alterasoft.net</recipient>
                       <recipient>solovyevk@alterasoft.net</recipient>
                     </recipients>
+          <message>${git.commit.id.abbrev} ${git.commit.message.short} ${git.build.user.email} ${project.groupId}::${project.artifactId}-${project.version} ${project.build.finalName} has been deployed</message>
           -->
-          <message>${project.groupId}::${project.artifactId}-${project.version} ${project.build.finalName} has been deployed</message>
         </configuration>
         <executions>
           <execution>
             <id>send</id>
-            <phase>validate</phase>
+            <phase>compile</phase>
             <goals>
               <goal>send</goal>
             </goals>
