--- a/src/test/resources/project-to-test/pom.xml
+++ b/src/test/resources/project-to-test/pom.xml
@@ -116,7 +116,7 @@
           userName=gitlab
           recipients=roytmana@alterasoft.net
           message=${project.groupId}::${project.artifactId}-${project.version} ${project.build.finalName} has been deployed\nCommit
-          ${git.commit.id.abbrev} by ${git.build.user.email}: "${git.commit.message.short}"
+          ${git.commit.id.abbrev} by ${git.commit.user.email}: "${git.commit.message.short}"
         </xmpp-plugin.configText>
 
         <xmpp-plugin.mailConfigText>
