Made JDK 11 compatible (bug in Smack)

--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -11,6 +11,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <build>
@@ -18,7 +20,7 @@
       <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
-        <version>2.2.4</version>
+        <version>2.2.5</version>
         <executions>
           <execution>
             <phase>validate</phase>
