--- a/src/test/resources/project-to-test/pom.xml
+++ b/src/test/resources/project-to-test/pom.xml
@@ -11,6 +11,8 @@
   <name>Test MyMojo</name>
 
   <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <build>
@@ -52,7 +54,7 @@
       <plugin>
         <groupId>net.alterasoft.maven</groupId>
         <artifactId>maven-xmpp-plugin</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.5</version>
         <configuration>
           <!-- <configText>
              host=talk.google.com
